k8s/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: otus-project-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      env: prod
  template:
    metadata:
      labels:
        app: nginx
        env: prod

    spec:
      volumes:
        - name: nginx
          configMap:
            name: nginx-cm
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /ect/nginx/conf.d/default/conf
              subPath: default.conf
              name: nginx
              readOnly: true
            - mountPath: "/data/static"
              name: staticfiles
