k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: otus-project-app
  labels:
    app: nginx-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
  selector:
    app: nginx
